--- a/desktop/package.json
+++ b/desktop/package.json
@@ -7,9 +7,14 @@
     "dev": "electron .",
     "build:mac": "electron-builder --config electron-builder.config.js --mac dmg",
     "build:win": "electron-builder --config electron-builder.config.js --win nsis --x64",
+    "build:win:bundle-gguf": "set BUNDLE_GGUF=1&& electron-builder --config electron-builder.config.js --win nsis --x64",
+    "build:win:bundle-full": "set BUNDLE_GGUF=1&& set BUNDLE_SHERPA_MODELS=1&& electron-builder --config electron-builder.config.js --win nsis --x64",
+    "build:win:bundle-ollama": "set BUNDLE_OLLAMA_MODELS=1&& electron-builder --config electron-builder.config.js --win nsis --x64",
+    "build:win:bundle-all": "set BUNDLE_GGUF=1&& set BUNDLE_SHERPA_MODELS=1&& set BUNDLE_OLLAMA_MODELS=1&& electron-builder --config electron-builder.config.js --win nsis --x64",
     "build:mac:bundle-gguf": "BUNDLE_GGUF=1 electron-builder --config electron-builder.config.js --mac dmg",
+    "build:mac:bundle-full": "BUNDLE_GGUF=1 BUNDLE_SHERPA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg",
     "build:mac:bundle-ollama": "BUNDLE_OLLAMA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg",
-    "build:mac:bundle-all": "BUNDLE_GGUF=1 BUNDLE_OLLAMA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg"
+    "build:mac:bundle-all": "BUNDLE_GGUF=1 BUNDLE_SHERPA_MODELS=1 BUNDLE_OLLAMA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg"
   },
   "devDependencies": {
     "electron": "^30.0.0",
