Add desktop Windows build config and lockfile

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -5,23 +5,19 @@
   "main": "main.js",
   "scripts": {
     "dev": "electron .",
-    "build:mac": "electron-builder --mac dmg"
+    "build:mac": "electron-builder --config electron-builder.config.js --mac dmg",
+    "build:win": "electron-builder --config electron-builder.config.js --win nsis --x64",
+    "build:win:bundle-gguf": "set BUNDLE_GGUF=1&& electron-builder --config electron-builder.config.js --win nsis --x64",
+    "build:win:bundle-full": "set BUNDLE_GGUF=1&& set BUNDLE_SHERPA_MODELS=1&& electron-builder --config electron-builder.config.js --win nsis --x64",
+    "build:win:bundle-ollama": "set BUNDLE_OLLAMA_MODELS=1&& electron-builder --config electron-builder.config.js --win nsis --x64",
+    "build:win:bundle-all": "set BUNDLE_GGUF=1&& set BUNDLE_SHERPA_MODELS=1&& set BUNDLE_OLLAMA_MODELS=1&& electron-builder --config electron-builder.config.js --win nsis --x64",
+    "build:mac:bundle-gguf": "BUNDLE_GGUF=1 electron-builder --config electron-builder.config.js --mac dmg",
+    "build:mac:bundle-full": "BUNDLE_GGUF=1 BUNDLE_SHERPA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg",
+    "build:mac:bundle-ollama": "BUNDLE_OLLAMA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg",
+    "build:mac:bundle-all": "BUNDLE_GGUF=1 BUNDLE_SHERPA_MODELS=1 BUNDLE_OLLAMA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg"
   },
   "devDependencies": {
     "electron": "^30.0.0",
     "electron-builder": "^24.13.3"
-  },
-  "build": {
-    "appId": "com.minashih.ai-meeting-assistant",
-    "productName": "AI Meeting Assistant",
-    "files": [
-      "**/*"
-    ],
-    "mac": {
-      "category": "public.app-category.productivity",
-      "target": [
-        "dmg"
-      ]
-    }
   }
 }
