--- a/desktop/package.json
+++ b/desktop/package.json
@@ -13,6 +13,7 @@
     "build:win:bundle-all": "set BUNDLE_GGUF=1&& set BUNDLE_SHERPA_MODELS=1&& set BUNDLE_OLLAMA_MODELS=1&& electron-builder --config electron-builder.config.js --win nsis --x64",
     "build:mac:bundle-gguf": "BUNDLE_GGUF=1 electron-builder --config electron-builder.config.js --mac dmg",
     "build:mac:bundle-full": "BUNDLE_GGUF=1 BUNDLE_SHERPA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg",
+    "build:mac:bundle-full:gguf-only": "BUNDLE_GGUF=1 BUNDLE_SHERPA_MODELS=1 BUILD_ARTIFACT_SUFFIX=-gguf-only electron-builder --config electron-builder.config.js --mac dmg",
     "build:mac:bundle-ollama": "BUNDLE_OLLAMA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg",
     "build:mac:bundle-all": "BUNDLE_GGUF=1 BUNDLE_SHERPA_MODELS=1 BUNDLE_OLLAMA_MODELS=1 electron-builder --config electron-builder.config.js --mac dmg"
   },
